# ParkLab-ChromCov

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  TODO.md  WORKFLOW.md  config.example.yaml  config.example.yml  config.yaml  main.py  pyproject.toml  qc.yaml
chromcov/: __cn.py  __coverage.py  __init__.py  __open.py  analysis.py  backends.py  calc_cov.py  categories.py  cli.py  collate.py  config.py  coverage.py  depth.py  dispatch.py  fetch.py  filtering.py  gen_config.py  get_cov.py  kernel.py  output.py  perbase.py  pipeline.py  plot_comparison.py  plots.py  policy.py  preflight.py  provenance.py  qc.py  qc_flags.py  qc_report.py  read_filter.py  reduce.py  reduce_cache.py  report.py  result.py  stats.py  strata.py  tool_comparison.py  validate.py
chromcov/config/: __init__.py  schema.py  template.py
chromcov/io/: __init__.py  alignment.py  codec.py  fetch.py  track.py
chromcov/present/: __init__.py  cytobands.py  frames.py  plots.py  sidecar.py
config/: config.example.yaml
dev/: CONTEXT.md  docker_cmd.txt  output-location-conventions.md
dev/dispatch-sketch/: README.md  analysis.py  analyze.py  config.example.yml  config.py  dispatch.py  mosdepth.py  native.py  output.py  plots.py  qc.py  run_example.py  strata.py  (+2 more)
docs/: coverage_tools_comparison.html  coverage_tools_comparison.md
scripts/: mosdepth_coverage.py
tests/: test_analysis.py  test_backends.py  test_collate.py  test_config.py  test_coverage_e2e.py  test_gen_config.py  test_mosdepth_compare.py  test_perbase.py  test_plots.py  test_reduce_cache.py  test_reductions.py  test_report.py  test_result.py
workflow/: Snakefile
(+7 files in other folders)
