[project]
name = "parklab-chromcov"
version = "0.1.0"
description = "Per-chromosome average coverage from a CRAM, with robust QC stats, callability strata, and approximate copy number."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.0",
    "pysam>=0.24.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "snakemake>=8.0",
]

[project.scripts]
chromcov = "chromcov.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chromcov"]
